[package]
name = "liaise_derive"
version = "0.2.2"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "proc-macro helper for liaise code validation"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/liaise_derive"

readme = "readme.md"

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
proc-macro-crate = "3"
